Adjust Auto Layout & Update Home UI 1. Order/DetailView 오토레이아웃 적용 2. 메인화면(Home) UI 업데이트

--- a/SmartOrder/SmartOrder/Cart/Cart.storyboard
+++ b/SmartOrder/SmartOrder/Cart/Cart.storyboard
@@ -33,7 +33,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <segue destination="rVN-NO-Zao" kind="show" id="OCU-GE-z7w"/>
+                                    <segue destination="rVN-NO-Zao" kind="show" identifier="PaySegue" id="OCU-GE-z7w"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="총 금액" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="euF-gI-pPg">
